[gd_scene load_steps=8 format=3 uid="uid://bjmxgm35m5r0f"]

[ext_resource type="Script" path="res://spinnyController.gd" id="1_ybhw5"]
[ext_resource type="PackedScene" uid="uid://c6yj6ng58cvbg" path="res://plane.tscn" id="2_b1wgo"]
[ext_resource type="AudioStream" uid="uid://butkdmw3pbawb" path="res://Three Red Hearts - Pixel War 1.ogg" id="6_hnynj"]
[ext_resource type="AudioStream" uid="uid://hkfrc0kgbwou" path="res://impactPunch_heavy_004.ogg" id="7_ql87j"]

[sub_resource type="Animation" id="Animation_gbxrl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 6)]
}

[sub_resource type="Animation" id="Animation_88nvh"]
resource_name = "slideIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, -119), Vector2(40, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qhstu"]
_data = {
"RESET": SubResource("Animation_gbxrl"),
"slideIn": SubResource("Animation_88nvh")
}

[node name="SpinnyPlane" type="Node2D"]
script = ExtResource("1_ybhw5")

[node name="Plane" parent="." instance=ExtResource("2_b1wgo")]

[node name="Rock_Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SFX" type="Node2D" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_hnynj")
autoplay = true
parameters/looping = true

[node name="Thud" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_ql87j")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 6.0
offset_right = 80.0
offset_bottom = 46.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 291.0
offset_top = 110.0
offset_right = 378.0
offset_bottom = 133.0
scale = Vector2(5.47684, 5.48831)
text = "Game Over"

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 264.0
offset_top = 319.0
offset_right = 352.0
offset_bottom = 350.0
scale = Vector2(6.22631, 4.70616)
text = "Play Again"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_qhstu")
}

[connection signal="timeout" from="Rock_Timer" to="." method="_on_rock_timer_timeout"]
[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
